--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -30,10 +30,8 @@ jobs:
         touch database/database.sqlite
     - name: Run Migrations
       env:
-          DB_HOST: ${{ secrets.DB_HOST }}
-          DB_DATABASE: ${{ secrets.DB_DATABASE }}
-          DB_USERNAME: ${{ secrets.DB_USERNAME }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_CONNECTION: sqlite
+          DB_DATABASE: database/database.sqlite
       run: php artisan migrate --force
     - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
       env:
